fix: add lazy load to landing page components and fix security component spacing elements from landing page

--- a/src/pages/SecuritySection/styles.css
+++ b/src/pages/SecuritySection/styles.css
@@ -5,10 +5,10 @@
 	color: white;
 }
 
-
 #security-section main h2 {
 	font: 2.6rem sans-serif;
 	padding: 2rem 0rem;
+	padding-left: 1.5rem;
 	letter-spacing: 0;
 	margin-top: 2rem;
 	font-weight: bold;
@@ -35,6 +35,11 @@
 	align-items: center;
 }
 
-#security-section article:nth-child(4) {
-	margin-top: -6rem;
+#security-section-articles {
+	height: 70vh;
+	padding-left: 1.5rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
 }
